zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/utxos@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
expression: stored_utxos
---
[
  (OutPoint(
    hash: "c4eaa58879081de3c24a7b117ed2b28300e7ec4c4c1dff1d3f1268b7857a4ddb",
    index: 0,
  ), None),
  (OutPoint(
    hash: "851bf6fbf7a976327817c738c489d7fa657752445430922d94c983c0b9ed4609",
    index: 0,
  ), Some(Utxo(
    output: Output(
      value: Amount(50000),
      lock_script: Script("21027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875ac"),
    ),
    height: Height(1),
    from_coinbase: true,
  ))),
  (OutPoint(
    hash: "851bf6fbf7a976327817c738c489d7fa657752445430922d94c983c0b9ed4609",
    index: 1,
  ), Some(Utxo(
    output: Output(
      value: Amount(12500),
      lock_script: Script("a9147d46a730d31f97b1930d3368a967c309bd4d136a87"),
    ),
    height: Height(1),
    from_coinbase: true,
  ))),
]
