zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/utxos@mainnet_2.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
expression: stored_utxos
---
[
  (OutputLocation(
    transaction_location: TransactionLocation(
      height: Height(0),
      index: TransactionIndex(0),
    ),
    output_index: OutputIndex(0),
  ), None),
  (OutputLocation(
    transaction_location: TransactionLocation(
      height: Height(1),
      index: TransactionIndex(0),
    ),
    output_index: OutputIndex(0),
  ), Some(UnspentOutputAddressLocation(
    output: Output(
      value: Amount(50000),
      lock_script: Script("21027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875ac"),
    ),
    address_location: None,
  ))),
  (OutputLocation(
    transaction_location: TransactionLocation(
      height: Height(1),
      index: TransactionIndex(0),
    ),
    output_index: OutputIndex(1),
  ), Some(UnspentOutputAddressLocation(
    output: Output(
      value: Amount(12500),
      lock_script: Script("a9147d46a730d31f97b1930d3368a967c309bd4d136a87"),
    ),
    address_location: Some(OutputLocation(
      transaction_location: TransactionLocation(
        height: Height(1),
        index: TransactionIndex(0),
      ),
      output_index: OutputIndex(1),
    )),
  ))),
  (OutputLocation(
    transaction_location: TransactionLocation(
      height: Height(2),
      index: TransactionIndex(0),
    ),
    output_index: OutputIndex(0),
  ), Some(UnspentOutputAddressLocation(
    output: Output(
      value: Amount(100000),
      lock_script: Script("21027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875ac"),
    ),
    address_location: None,
  ))),
  (OutputLocation(
    transaction_location: TransactionLocation(
      height: Height(2),
      index: TransactionIndex(0),
    ),
    output_index: OutputIndex(1),
  ), Some(UnspentOutputAddressLocation(
    output: Output(
      value: Amount(25000),
      lock_script: Script("a9147d46a730d31f97b1930d3368a967c309bd4d136a87"),
    ),
    address_location: Some(OutputLocation(
      transaction_location: TransactionLocation(
        height: Height(1),
        index: TransactionIndex(0),
      ),
      output_index: OutputIndex(1),
    )),
  ))),
]
