zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/utxos@testnet_2.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
expression: stored_utxos
---
[
  (OutPoint(
    hash: "c4eaa58879081de3c24a7b117ed2b28300e7ec4c4c1dff1d3f1268b7857a4ddb",
    index: 0,
  ), None),
  (OutPoint(
    hash: "f37e9f691fffb635de0999491d906ee85ba40cd36dae9f6e5911a8277d7c5f75",
    index: 0,
  ), Some(Utxo(
    output: Output(
      value: Amount(50000),
      lock_script: Script("21025229e1240a21004cf8338db05679fa34753706e84f6aebba086ba04317fd8f99ac"),
    ),
    height: Height(1),
    from_coinbase: true,
  ))),
  (OutPoint(
    hash: "f37e9f691fffb635de0999491d906ee85ba40cd36dae9f6e5911a8277d7c5f75",
    index: 1,
  ), Some(Utxo(
    output: Output(
      value: Amount(12500),
      lock_script: Script("a914ef775f1f997f122a062fff1a2d7443abd1f9c64287"),
    ),
    height: Height(1),
    from_coinbase: true,
  ))),
  (OutPoint(
    hash: "5822c0532da8a008259ac39933d3210e508c17e3ba21d2b2c428785efdccb3d5",
    index: 0,
  ), Some(Utxo(
    output: Output(
      value: Amount(100000),
      lock_script: Script("2102acce9f6c16986c525fd34759d851ef5b4b85b5019a57bd59747be0ef1ba62523ac"),
    ),
    height: Height(2),
    from_coinbase: true,
  ))),
  (OutPoint(
    hash: "5822c0532da8a008259ac39933d3210e508c17e3ba21d2b2c428785efdccb3d5",
    index: 1,
  ), Some(Utxo(
    output: Output(
      value: Amount(25000),
      lock_script: Script("a914ef775f1f997f122a062fff1a2d7443abd1f9c64287"),
    ),
    height: Height(2),
    from_coinbase: true,
  ))),
]
